# periodic-scraper

./: .gitignore  README.md  hello.py  pyproject.toml
src/: article_scraper.py  config.yaml  runner.py  scheduler.py  scraper.py  storage.py  upload.py  utils.py
